--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>camps</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>camps</title>
 </head>
+
 <body>
-  <h1>oiii</h1>  
+  <header>
+    <ul>
+      <li>sertanejo</li>
+      <li>trap</li>
+      <li>eletronica</li>
+    </ul>
+  </header>
+  <h1>oiii</h1>
 </body>
+
 </html>
