--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
 <body>
   <header>
-    <ul>
-      <li>sertanejo</li>
-      <li>trap</li>
-      <li>eletronica</li>
+    <ul class="nav-lista">
+      <li class="nav-item">sertanejo</li>
+      <li class="nav-item">trap</li>
+      <li class="nav-item">eletronica</li>
     </ul>
   </header>
   <h1>oiii</h1>
