--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="style.css">
   <title>camps</title>
 </head>
@@ -17,7 +19,16 @@
       <li class="nav-item">eletronica</li>
     </ul>
   </header>
-  <h1>oiii</h1>
+  <main>
+    <section class="secao">
+      <div class="titulo_section">
+        <h1>Rap</h1>
+      </div>
+      <ul class="moldura_videos">
+        <li class="video"><iframe width="1280" height="720" src="https://www.youtube.com/embed/BN7CJkvbt3I" title="Henrique e Juliano - CIDADE VIZINHA - DVD Menos é Mais - IG henriqueejuliano" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></li>
+        <li class="video"><iframe width="1280" height="735" src="https://www.youtube.com/embed/2iUAbkwfxcY" title="Cristiano Araújo - Caso Indefinido (In The Cities DVD) [Brazilian Music]" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></li>
+        <li class="video"><iframe width="1280" height="720" src="https://www.youtube.com/embed/s_3m9nR04IA" title="MARCA EVIDENTE - Israel e Rodolffo + Jorge  Mateus - OFICIAL HD" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></li>
+  </main>
 </body>
 
 </html>
