--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
         <li class="video"><iframe width="480" height='320" src="https://www.youtube.com/embed/pCnl0Z88wJQ" title="You &amp; Me - Disclosure (Flume Remix) (slow+reverb)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <li class="video"><iframe width="480" height="320" src="https://www.youtube.com/embed/jNKVYEv5HRU" title="Mochakk - Wow (Music Video)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <li class="video"><iframe width="480" height="320" src="https://www.youtube.com/embed/-jS5oyP7GVo" title="MEGA FUNK SHOW ME LOVE - PETROSKI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-      </main>
-</body>
 
-</html>
+        </ul> 
+      </section>
+    </main>
+  </body>
+
+  </html>
