--- a/index.html
+++ b/index.html
@@ -33,8 +33,6 @@
         <section class="class">
           <div class="titulo_section">
             <h1>trap</h1>
-          </div>
-      <ul class="moldura_videos">
         <li class="video"><iframe width="580" height="420" src="https://www.youtube.com/embed/6BgxLcofzoo" title="Orochi &quot;CHAMPAGNE&quot; feat. PL Quest, BIN (prod. Kizzy)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <li class="video"><iframe width="580" height="420" src="https://www.youtube.com/embed/yTz-LsOK6EA" title="Orochi &quot;VERSACE&quot; (prod.Ajaxx)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <li class="video"><iframe width="580" height="420" src="https://www.youtube.com/embed/ryigUw_Y8v0" title="afrodite - Delacruz e IZA (Prod. JOK3R)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -43,15 +41,7 @@
             <section class="class">
               <div class="titulo_section">
                 <h1>eletronica</h1>
-          </div>
-      <ul class="moldura_videos">
-        <li class="video"><iframe width="580" height='420" src="https://www.youtube.com/embed/pCnl0Z88wJQ" title="You &amp; Me - Disclosure (Flume Remix) (slow+reverb)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        <li class="video"><iframe width="580" height="420" src="https://www.youtube.com/embed/jNKVYEv5HRU" title="Mochakk - Wow (Music Video)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        <li class="video"><iframe width="580" height="420" src="https://www.youtube.com/embed/-jS5oyP7GVo" title="MEGA FUNK SHOW ME LOVE - PETROSKI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
-        </ul> 
-      </section>
-    </main>
-  </body>
-
-  </html>
+                <li class="video"><iframe width="1280" height="720" src="https://www.youtube.com/embed/jNKVYEv5HRU" title="Mochakk - Wow (Music Video)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                  <li class="video"><iframe width="1280" height="718" src="https://www.youtube.com/embed/-jS5oyP7GVo" title="MEGA FUNK SHOW ME LOVE - PETROSKI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <li class="video"><iframe width="1280" height="720" src="https://www.youtube.com/embed/h9XHf2VYCtk" title="Disclosure - You &amp; Me ft. Eliza Doolittle (Rivo Remix)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+       
